# microshop

./: .gitignore  crud.py  items_views.py  main.py  pyproject.toml  queryes.sql
alembic/: env.py
alembic/versions/: 2023_11_22_0754-a242868d1e0d_create_table.py  2023_11_22_1342-cfea567d0970_create_user_table.py  2023_11_22_1352-6b31608e7ee6_create_posts_table.py  2023_11_22_2310-a6afaeeb8f52_create_profile_table.py  2023_11_28_1403-5f222e725bbe_create_orders_table.py  2023_11_29_0745-2122d98d409e_create_oreder_prodcut_association_table.py  2023_12_01_1334-78576ae974cc_add_count_column_to_order_prduct_.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  views.py
api_v1/products/: crud.py  dependencies.py  view.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: schemas.py
